--- a/.github/workflow-templates/security-paranoia-bot.yml
+++ b/.github/workflow-templates/security-paranoia-bot.yml
@@ -41,11 +41,13 @@ jobs:
       - name: Run Security Analysis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Optional: Add Gemini API key if you want AI-enhanced analysis
+          # AI Configuration (Optional - enhances vulnerability detection)
+          ENABLE_AI_ANALYSIS: ${{ secrets.GEMINI_API_KEY != '' && 'true' || 'false' }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          # For now, pattern-based detection only (AI support coming soon)
-          ENABLE_AI_ANALYSIS: 'false'
+          GEMINI_MODEL: 'gemini-2.5-pro'  # Can fallback to gemini-2.0-flash if overloaded
+          # Security Analysis Configuration
           MAX_COMMENTS_PER_PR: 25
+          CONFIDENCE_THRESHOLD: 70
         run: |
           security-paranoia-bot action \
             --repo ${{ github.repository }} \
