--- a/.github/workflows/security-paranoia-bot.yml
+++ b/.github/workflows/security-paranoia-bot.yml
@@ -18,8 +18,6 @@ on:
         type: boolean
         default: true
     secrets:
-      GITHUB_TOKEN:
-        required: true
       GEMINI_API_KEY:
         required: false
       OPENAI_API_KEY:
@@ -40,7 +38,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ github.token }}
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -54,62 +52,62 @@ jobs:
       
       - name: Security Analysis Simulation
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           ENABLE_AI_ANALYSIS: ${{ inputs.enable_ai_analysis }}
           ENABLE_DEEP_SCAN: ${{ inputs.enable_deep_scan }}
           PR_NUMBER: ${{ inputs.pr_number || github.event.pull_request.number }}
         run: |
-          echo \"🔍 Starting Security Paranoia Bot Analysis...\"
-          echo \"Repository: ${{ github.repository }}\"
-          echo \"PR Number: ${PR_NUMBER}\"
-          echo \"Deep Scan: ${ENABLE_DEEP_SCAN}\"
-          echo \"AI Analysis: ${ENABLE_AI_ANALYSIS}\"
-          echo \"\"
+          echo "🔍 Starting Security Paranoia Bot Analysis..."
+          echo "Repository: ${{ github.repository }}"
+          echo "PR Number: ${PR_NUMBER}"
+          echo "Deep Scan: ${ENABLE_DEEP_SCAN}"
+          echo "AI Analysis: ${ENABLE_AI_ANALYSIS}"
+          echo ""
           
           # Simulate security analysis
-          echo \"📊 SECURITY ANALYSIS RESULTS\"
-          echo \"=============================\"
-          echo \"\"
+          echo "📊 SECURITY ANALYSIS RESULTS"
+          echo "============================="
+          echo ""
           
           # Analyze each vulnerable file
-          FILES_TO_ANALYZE=(\"server.js\" \"auth.js\" \"database.js\" \"payment.js\" \"utils.js\")
+          FILES_TO_ANALYZE=("server.js" "auth.js" "database.js" "payment.js" "utils.js")
           TOTAL_VULNERABILITIES=0
           CRITICAL_COUNT=0
           HIGH_COUNT=0
           MEDIUM_COUNT=0
           
-          for file in \"${FILES_TO_ANALYZE[@]}\"; do
-            if [[ -f \"$file\" ]]; then
-              echo \"🔍 Analyzing $file...\"
+          for file in "${FILES_TO_ANALYZE[@]}"; do
+            if [[ -f "$file" ]]; then
+              echo "🔍 Analyzing $file..."
               
               case $file in
-                \"server.js\")
+                "server.js")
                   FILE_VULNS=17
                   FILE_CRITICAL=5
                   FILE_HIGH=8
                   FILE_MEDIUM=4
                   ;;
-                \"auth.js\")
+                "auth.js")
                   FILE_VULNS=12
                   FILE_CRITICAL=4
                   FILE_HIGH=6
                   FILE_MEDIUM=2
                   ;;
-                \"database.js\")
+                "database.js")
                   FILE_VULNS=10
                   FILE_CRITICAL=4
                   FILE_HIGH=4
                   FILE_MEDIUM=2
                   ;;
-                \"payment.js\")
+                "payment.js")
                   FILE_VULNS=8
                   FILE_CRITICAL=6
                   FILE_HIGH=2
                   FILE_MEDIUM=0
                   ;;
-                \"utils.js\")
+                "utils.js")
                   FILE_VULNS=8
                   FILE_CRITICAL=3
                   FILE_HIGH=3
@@ -117,11 +115,11 @@ jobs:
                   ;;
               esac
               
-              echo \"  ✅ Found $FILE_VULNS vulnerabilities\"
-              echo \"  🔴 Critical: $FILE_CRITICAL\"
-              echo \"  🟠 High: $FILE_HIGH\"
-              echo \"  🟡 Medium: $FILE_MEDIUM\"
-              echo \"\"
+              echo "  ✅ Found $FILE_VULNS vulnerabilities"
+              echo "  🔴 Critical: $FILE_CRITICAL"
+              echo "  🟠 High: $FILE_HIGH"
+              echo "  🟡 Medium: $FILE_MEDIUM"
+              echo ""
               
               TOTAL_VULNERABILITIES=$((TOTAL_VULNERABILITIES + FILE_VULNS))
               CRITICAL_COUNT=$((CRITICAL_COUNT + FILE_CRITICAL))
@@ -130,81 +128,81 @@ jobs:
             fi
           done
           
-          echo \"📈 SUMMARY REPORT\"
-          echo \"=================\"
-          echo \"Total Vulnerabilities: $TOTAL_VULNERABILITIES\"
-          echo \"🔴 Critical: $CRITICAL_COUNT\"
-          echo \"🟠 High: $HIGH_COUNT\"
-          echo \"🟡 Medium: $MEDIUM_COUNT\"
-          echo \"\"
+          echo "📈 SUMMARY REPORT"
+          echo "================="
+          echo "Total Vulnerabilities: $TOTAL_VULNERABILITIES"
+          echo "🔴 Critical: $CRITICAL_COUNT"
+          echo "🟠 High: $HIGH_COUNT"
+          echo "🟡 Medium: $MEDIUM_COUNT"
+          echo ""
           
           # Generate security report
           cat > security-report.json << EOF
           {
-            \"summary\": {
-              \"totalVulnerabilities\": $TOTAL_VULNERABILITIES,
-              \"critical\": $CRITICAL_COUNT,
-              \"high\": $HIGH_COUNT,
-              \"medium\": $MEDIUM_COUNT,
-              \"analysisTime\": \"$(date -Iseconds)\",
-              \"aiAnalysisEnabled\": ${ENABLE_AI_ANALYSIS}
+            "summary": {
+              "totalVulnerabilities": $TOTAL_VULNERABILITIES,
+              "critical": $CRITICAL_COUNT,
+              "high": $HIGH_COUNT,
+              "medium": $MEDIUM_COUNT,
+              "analysisTime": "$(date -Iseconds)",
+              "aiAnalysisEnabled": ${ENABLE_AI_ANALYSIS}
             },
-            \"vulnerabilities\": [
+            "vulnerabilities": [
               {
-                \"file\": \"server.js\",
-                \"line\": 12,
-                \"type\": \"XSS\",
-                \"severity\": \"high\",
-                \"description\": \"Direct HTML injection without sanitization\",
-                \"aiAnalysis\": {
-                  \"confidence\": 0.95,
-                  \"explanation\": \"User input is directly inserted into HTML response without any sanitization or encoding\",
-                  \"suggestedFix\": \"Use a templating engine with automatic escaping or manually escape user input\"
+                "file": "server.js",
+                "line": 12,
+                "type": "XSS",
+                "severity": "high",
+                "description": "Direct HTML injection without sanitization",
+                "aiAnalysis": {
+                  "confidence": 0.95,
+                  "explanation": "User input is directly inserted into HTML response without any sanitization or encoding",
+                  "suggestedFix": "Use a templating engine with automatic escaping or manually escape user input"
                 }
               },
               {
-                \"file\": \"server.js\",
-                \"line\": 225,
-                \"type\": \"Command Injection\",
-                \"severity\": \"critical\",
-                \"description\": \"Direct command execution with user input\",
-                \"aiAnalysis\": {
-                  \"confidence\": 0.98,
-                  \"explanation\": \"User-controlled input is directly passed to exec() function enabling RCE\",
-                  \"suggestedFix\": \"Use parameterized execution with spawn() and validate all inputs\"
+                "file": "server.js",
+                "line": 225,
+                "type": "Command Injection",
+                "severity": "critical",
+                "description": "Direct command execution with user input",
+                "aiAnalysis": {
+                  "confidence": 0.98,
+                  "explanation": "User-controlled input is directly passed to exec() function enabling RCE",
+                  "suggestedFix": "Use parameterized execution with spawn() and validate all inputs"
                 }
               },
               {
-                \"file\": \"payment.js\",
-                \"line\": 15,
-                \"type\": \"Price Manipulation\",
-                \"severity\": \"critical\",
-                \"description\": \"Client-controlled pricing in payment processing\",
-                \"aiAnalysis\": {
-                  \"confidence\": 0.92,
-                  \"explanation\": \"Payment amount is taken directly from client request without server-side validation\",
-                  \"suggestedFix\": \"Always validate pricing server-side against product database\"
+                "file": "payment.js",
+                "line": 15,
+                "type": "Price Manipulation",
+                "severity": "critical",
+                "description": "Client-controlled pricing in payment processing",
+                "aiAnalysis": {
+                  "confidence": 0.92,
+                  "explanation": "Payment amount is taken directly from client request without server-side validation",
+                  "suggestedFix": "Always validate pricing server-side against product database"
                 }
               }
             ]
           }
           EOF
           
-          echo \"💾 Security report saved to security-report.json\"
+          echo "💾 Security report saved to security-report.json"
           
           # Check if we should fail the build
           if [[ $CRITICAL_COUNT -gt 0 ]]; then
-            echo \"\"
-            echo \"❌ BUILD FAILED: $CRITICAL_COUNT critical vulnerabilities detected\"
-            echo \"🚨 Critical vulnerabilities must be fixed before deployment\"
+            echo ""
+            echo "❌ BUILD FAILED: $CRITICAL_COUNT critical vulnerabilities detected"
+            echo "🚨 Critical vulnerabilities must be fixed before deployment"
             exit 1
           elif [[ $HIGH_COUNT -gt 10 ]]; then
-            echo \"\"
-            echo \"⚠️  BUILD WARNING: $HIGH_COUNT high-severity vulnerabilities detected\"
-            echo \"🔍 Consider addressing high-severity issues\"
+            echo ""
+            echo "⚠️  BUILD WARNING: $HIGH_COUNT high-severity vulnerabilities detected"
+            echo "🔍 Consider addressing high-severity issues"
           else
-            echo \"\"
-            echo \"✅ BUILD PASSED: No critical vulnerabilities detected\"
+            echo ""
+            echo "✅ BUILD PASSED: No critical vulnerabilities detected"
           fi
       
       - name: Upload Security Report
@@ -216,10 +214,10 @@ jobs:
           retention-days: 30
       
       - name: Comment on PR
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' || inputs.pr_number
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ github.token }}
           script: |
             const fs = require('fs');
             
@@ -317,29 +315,40 @@ jobs:
             > 🔗 **View Full Report**: Check the workflow artifacts for detailed analysis
             `;
             
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
+            // Determine issue number
+            const issueNumber = context.payload.pull_request?.number || 
+                               parseInt('${{ inputs.pr_number }}') || 
+                               context.issue.number;
             
-            // Also update the PR check status
-            const checkRunName = 'Security Paranoia Bot';
-            const conclusion = summary.critical > 0 ? 'failure' : 'success';
-            const checkTitle = summary.critical > 0 ? 
-              `❌ ${summary.critical} critical vulnerabilities detected` :
-              `✅ Security analysis passed`;
-            
-            github.rest.checks.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: checkRunName,
-              head_sha: context.payload.pull_request.head.sha,
-              status: 'completed',
-              conclusion: conclusion,
-              output: {
-                title: checkTitle,
-                summary: `Found ${summary.totalVulnerabilities} total vulnerabilities: ${summary.critical} critical, ${summary.high} high, ${summary.medium} medium severity issues.`
+            if (issueNumber) {
+              github.rest.issues.createComment({
+                issue_number: issueNumber,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: comment
+              });
+              
+              // Also update the PR check status if it's a PR
+              if (context.payload.pull_request) {
+                const checkRunName = 'Security Paranoia Bot';
+                const conclusion = summary.critical > 0 ? 'failure' : 'success';
+                const checkTitle = summary.critical > 0 ? 
+                  `❌ ${summary.critical} critical vulnerabilities detected` :
+                  `✅ Security analysis passed`;
+                
+                github.rest.checks.create({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  name: checkRunName,
+                  head_sha: context.payload.pull_request.head.sha,
+                  status: 'completed',
+                  conclusion: conclusion,
+                  output: {
+                    title: checkTitle,
+                    summary: `Found ${summary.totalVulnerabilities} total vulnerabilities: ${summary.critical} critical, ${summary.high} high, ${summary.medium} medium severity issues.`
+                  }
+                });
               }
-            });
+            } else {
+              console.log('No issue/PR number found, skipping comment creation');
+            }
