--- a/.github/workflows/security-paranoia-bot.yml
+++ b/.github/workflows/security-paranoia-bot.yml
@@ -252,7 +252,7 @@ jobs:
           retention-days: 30
       
       - name: Comment on PR
-        if: github.event_name == 'pull_request' || inputs.pr_number
+        if: always() && (github.event_name == 'pull_request' || inputs.pr_number)
         uses: actions/github-script@v7
         with:
           github-token: ${{ github.token }}
@@ -359,7 +359,7 @@ jobs:
                                context.issue.number;
             
             if (issueNumber) {
-              github.rest.issues.createComment({
+              await github.rest.issues.createComment({
                 issue_number: issueNumber,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -374,7 +374,7 @@ jobs:
                   `❌ ${summary.critical} critical vulnerabilities detected` :
                   `✅ Security analysis passed`;
                 
-                github.rest.checks.create({
+                await github.rest.checks.create({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   name: checkRunName,
